fix the controller comment for swagger doc and install the multer
